--- a/Stox28Aug23.ipynb
+++ b/Stox28Aug23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhQo6mxn6hbKo9SnfIYmyd",
+      "authorship_tag": "ABX9TyPPbZUnHec8nAvPlhBBueq7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1544,6 +1544,30 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The z-score tells us how many standard deviations away a data point is from the mean. A positive z-score indicates that the data point is above the mean, while a negative z-score indicates that it is below the mean.\n",
+        "\n",
+        "By setting a threshold, you can identify outliers or anomalies based on the magnitude of the z-score. If a data point has a z-score that exceeds the threshold (e.g., a z-score greater than 2 or 3), it is considered an anomaly.\n",
+        "\n",
+        "Using z-scores for anomaly detection in a stock chart involves calculating the z-scores for each data point based on a rolling mean and standard deviation. This rolling approach accounts for the changing characteristics of the data over time. Data points with z-scores exceeding a predefined threshold are then flagged as anomalies.\n",
+        "\n",
+        "In the previous code example, we calculated the z-scores for the stock price data using a rolling mean and standard deviation. We then used a threshold value (e.g., threshold = 2.5) to identify anomalies by comparing the absolute value of the z-scores to the threshold.\n",
+        "\n",
+        "Please note that the choice of threshold depends on your specific application and the desired sensitivity to anomalies. Adjusting the threshold allows you to control the strictness of anomaly detection."
+      ],
+      "metadata": {
+        "id": "fjEtNC1pbk_j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ATlr_6Iob-xw"
+      }
     }
   ]
 }
